force-app/main/default/objects/Licence__c/Licence__c.object-meta.xml
<CustomObject>
    <description>Object for storing Licence Records Information</description>
    <label>Licence</label>
    <nameField>
        <displayFormat>LIC{0000000}</displayFormat>
        <label>Licence Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Licences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>