force-app/main/default/objects/Licence__c/fields/Installation_Key__c.field-meta.xml
<CustomField>
    <fullName>Installation_Key__c</fullName>
    <description>Field for storing Installation Key values</description>
    <inlineHelpText>Installation Key is generating from MAC Address</inlineHelpText>
    <label>Installation Key</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>