force-app/main/default/objects/Licence__c/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>License Order</label>
    <referenceTo>license_order__c</referenceTo>
    <relationshipLabel>Licences</relationshipLabel>
    <relationshipName>Licences</relationshipName>
    <type>Lookup</type>
</CustomField>