force-app/main/default/objects/Licence__c/fields/Request_Number__c.field-meta.xml
<CustomField>
    <fullName>Request_Number__c</fullName>
    <description>Field for Storing Request Number on License Object</description>
    <formula>Request__r.Request_Number__c</formula>
    <inlineHelpText>Value from License Order</inlineHelpText>
    <label>Request Number</label>
    <type>Text</type>
</CustomField>