force-app/main/default/objects/Licence__c/fields/Used__c.field-meta.xml
<CustomField>
    <fullName>Used__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field purpose is to show when MAC has beed already related with one of the Requests</description>
    <inlineHelpText>Checked if already related with one of requests</inlineHelpText>
    <label>Used</label>
    <type>Checkbox</type>
</CustomField>