force-app/main/default/objects/Licence__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>License_Number__c</columns>
    <columns>MAC_address__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Used__c</columns>
    <columns>Request__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>